--- a/packages/assets/css/global.less
+++ b/packages/assets/css/global.less
@@ -1,21 +1,9 @@
-@font-face {
-  font-family: 'itvfont';  /* project id 880479 */
-  src: url('//at.alicdn.com/t/font_880479_fiuhafe9gl.eot');
-  src: url('//at.alicdn.com/t/font_880479_fiuhafe9gl.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_880479_fiuhafe9gl.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_880479_fiuhafe9gl.woff') format('woff'),
-  url('//at.alicdn.com/t/font_880479_fiuhafe9gl.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_880479_fiuhafe9gl.svg#itvfont') format('svg');
-}
-
-*[class^="itv-icon"] {
-  font-family: "itvfont" !important;
-  font-size: 26ipx;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.itv-icon-arrow::before {
-    content: '\e697';
+.itv-demo-btn{
+    height: 44ipx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: @itv-page-main;
+    font-size: 16ipx;
+    color: @itv-page-white;
 }
