--- a/packages/assets/css/global.less
+++ b/packages/assets/css/global.less
@@ -6,4 +6,6 @@
     background-color: @itv-page-main;
     font-size: 16ipx;
     color: @itv-page-white;
+    border-radius: 4px;
+    cursor: pointer;
 }
