截图插件dome编写完成

--- a/packages/assets/css/global.less
+++ b/packages/assets/css/global.less
@@ -9,3 +9,18 @@
     border-radius: 4px;
     cursor: pointer;
 }
+input {
+  border-radius: 0px;
+  outline: none;
+  padding: 0px;
+  margin: 0px;
+  border: none;
+}
+
+.flex-rows-box {
+  display: flex;
+  .rows-item{
+      flex: 1;
+
+  }
+}
