--- a/packages/assets/css/theme.less
+++ b/packages/assets/css/theme.less
@@ -93,3 +93,9 @@ SimHei,
 @stepper-color: #333 ;
 @stepperbar-width: 11px ;
 @stepperbar-color: #333 ;
+
+.itv-cell-border {
+    background-image: linear-gradient(rgba(@dark-color, .5), rgba(@dark-color, .5));
+    background-size: 100% 1px;
+    background-repeat: no-repeat;
+}
