--- a/packages/assets/css/doc.less
+++ b/packages/assets/css/doc.less
@@ -1,8 +1,26 @@
 
 
 .doc-page{
+    font-family: Menlo,Menlo Regular,Consolas,monospace;
     color: #333;
     padding: 10px;
+    font-size: 14px;
+    line-height: 180%;
+    padding-bottom: 20px;
+    .phone-show{
+        position: fixed;
+        top: 0px;
+        right: 0px;
+        iframe{
+            width: 375px;
+            height: 667px;
+            background-color: #fff;
+            border:#ddd solid 1px;
+            border-radius: 6px;
+
+        }
+    }
+
     table{
         border-spacing: 0;
         border-collapse: collapse;
@@ -23,13 +41,20 @@
     h1{
         font-size: 28px;
         color: @itv-page-main;
+        font-weight: normal;
     }
     h2{
         font-size: 26px;
+        font-weight: 300;
+        color: #999;
+        
+
     }
     h3 {
         font-size: 24px;
-
+        font-weight: 200;
+        border-bottom: #ddd solid 1px;
+        padding-bottom: 10px;
     }
     h4{
         font-size: 20px;
