--- a/packages/assets/css/doc.less
+++ b/packages/assets/css/doc.less
@@ -3,20 +3,20 @@
 .doc-page{
     font-family: Menlo,Menlo Regular,Consolas,monospace;
     color: #333;
-    padding: 10px;
-    font-size: 14px;
+    padding: 10ipx;
+    font-size: 14ipx;
     line-height: 180%;
-    padding-bottom: 20px;
+    padding-bottom: 20ipx;
     .phone-show{
         position: fixed;
-        top: 0px;
-        right: 0px;
+        top: 0ipx;
+        right: 0ipx;
         iframe{
-            width: 375px;
-            height: 667px;
+            width: 375ipx;
+            height: 667ipx;
             background-color: #fff;
-            border:#ddd solid 1px;
-            border-radius: 6px;
+            border:#ddd solid 1ipx;
+            border-radius: 6ipx;
 
         }
     }
@@ -28,53 +28,53 @@
         thead{
             background-color: #eee;
             th{
-                border:#ddd solid 1px;
-                padding: 10px;
+                border:#ddd solid 1ipx;
+                padding: 10ipx;
             }
         }
         td{
-            border:#ddd solid 1px;
+            border:#ddd solid 1ipx;
             text-align: center;
-            padding: 10px;
+            padding: 10ipx;
         }
     }
     h1{
-        font-size: 28px;
+        font-size: 28ipx;
         color: @itv-page-main;
         font-weight: normal;
     }
     h2{
-        font-size: 26px;
+        font-size: 26ipx;
         font-weight: 300;
         color: #999;
-        
+
 
     }
     h3 {
-        font-size: 24px;
+        font-size: 24ipx;
         font-weight: 200;
-        border-bottom: #ddd solid 1px;
-        padding-bottom: 10px;
+        border-bottom: #ddd solid 1ipx;
+        padding-bottom: 10ipx;
     }
     h4{
-        font-size: 20px;
+        font-size: 20ipx;
     }
     h5 {
-        font-size: 18px;
+        font-size: 18ipx;
     }
     h6 {
-        font-size: 16px;
+        font-size: 16ipx;
     }
     .doc-tab{
         .doc-tab-group{
             display: flex;
-            border-bottom: #ddd solid 1px;
+            border-bottom: #ddd solid 1ipx;
             .tab-item-btn{
-                font-size: 16px;
-                padding: 10px;
+                font-size: 16ipx;
+                padding: 10ipx;
                 cursor: pointer;
                 &.active{
-                    border-bottom:@itv-page-main solid 2px;
+                    border-bottom:@itv-page-main solid 2ipx;
                 }
             }
         }
