--- a/packages/assets/css/animate.less
+++ b/packages/assets/css/animate.less
@@ -15,6 +15,8 @@
 }
 
 
+
+
 .itv-fade-enter-active,.itv-fade-leave-active {
   opacity: 1;
   transition: opacity linear 0.2s;
@@ -23,28 +25,34 @@
   opacity: 0;
 }
 .itv-dialog-enter-active {
+
   animation: itv-dialog-in .5s;
 }
 .itv-dialog-leave-active {
   animation: itv-dialog-out .3s;
+
 }
 @keyframes itv-dialog-in {
   0% {
-    transform: scale(1.185);
+    transform-origin: center;
+    transform: translate(-50%,-50%) scale(1.185);
     opacity: 0;
   }
   100% {
-    transform: scale(1);
+    transform-origin: center;
+    transform: translate(-50%,-50%) scale(1);
     opacity: 1;
   }
 }
 @keyframes itv-dialog-out {
   0% {
-    transform: scale(1);
+     transform-origin: center;
+    transform:   translate(-50%,-50%) scale(1);
     opacity: 1;
   }
   100% {
-    transform: scale(0.85);
+    transform-origin: center;
+    transform: translate(-50%,-50%) scale(0.85);
     opacity: 0;
   }
 }
