--- a/packages/components/scroller/scroller.less
+++ b/packages/components/scroller/scroller.less
@@ -1,3 +1,23 @@
+.itv-scroller{
+    height: 100%;
+    overflow: hidden;
+
+    .itv-scroller-silde{
+
+        height: 100%;
+    }
+
+    .itv-scroller-content{
+        width: 100%;
+
+    }
+}
+
+
+
+
+
+
 @keyframes rotation {
     0% {
         -webkit-transform: rotate(0deg);
