地图添加地学校

--- a/src/assets/css/const.less
+++ b/src/assets/css/const.less
@@ -16,7 +16,12 @@
 
 
 //Background Color
-
+@size-text-mini:12px;
+@size-text-base:14px;
+@size-text-sub:16px;
+@size-text-title: 18px;
+@size-text-mid:22px;
+@size-text-big:26px;
 
 
 @fs-extra-small: 10rpx;
@@ -29,3 +34,5 @@
 //height
 @bar-base:44rpx;
 @bar-samll: 36rpx;
+
+
