--- a/src/pages/school/less/index.less
+++ b/src/pages/school/less/index.less
@@ -24,9 +24,11 @@
   padding-top: 15px;
   height: 100px;
 }
-.list-page-path{
-   margin-bottom: 15px;
+
+.list-page-path {
+  margin-bottom: 20px;
 }
+
 .title-col {
   margin-top: 10 rpx;
   margin-bottom: 10px;
@@ -46,9 +48,14 @@
   }
 }
 
-.btn-submit{
+.btn-submit {
   width: 122px;
 }
-.btn-cancel{
+
+.btn-cancel {
   width: 122px;
+}
+
+.btn-open-map{
+   font-size: 20px;
 }
