--- a/packages/components/schedule/index.less
+++ b/packages/components/schedule/index.less
@@ -23,15 +23,24 @@
     left: 0;
     right: 0;
     top: 100%;
-    background-color: #ddd;
+    background-color: #fff;
     .week-item{
-        background-color: #ddd;
+        background-color: #fff;
         .day-item{
-            background-color: #999;
         }
     }
     z-index: 10;
 }
+.calendar-box {
+    position: relative;
+    overflow: hidden;
+    .calendar {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+    }
+}
+
 .calendar, .week-slide{
     display: flex;
     
@@ -52,6 +61,21 @@
             justify-content: center;
             font-size: 14ipx;
             color: #333;
+            .active{
+                width: 28ipx;
+                height: 28ipx;
+                border-radius: 18ipx;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            &.day-active {
+                .active{
+                    color: #fff;
+                    background-color: #e1251b;
+                }
+            }
             &.prev-month {
                 color: #999;
             }
