日程日历完成

--- a/packages/components/schedule/index.less
+++ b/packages/components/schedule/index.less
@@ -89,3 +89,16 @@
 .animating{
     transition: transform .3s;
 }
+.icon-bar {
+    height: 24ipx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: #eee solid 1px;
+    img {
+        width: 14ipx;
+    }
+    .rotate180{
+        transform: rotate(180deg);
+    }
+}
