--- a/packages/components/schedule/index.less
+++ b/packages/components/schedule/index.less
@@ -1,4 +1,4 @@
-.calendar-week-text{
+.calendar-week-text {
     display: flex;
     padding: 0 10ipx;
     box-sizing: border-box;
@@ -7,26 +7,26 @@
         text-align: center;
     }
 }
-.slide-calendar{
+.slide-calendar {
     width: 100%;
     overflow-x: hidden;
     box-sizing: border-box;
 }
-.calendar-title{
+.calendar-title {
     text-align: center;
 }
 .calendar-week-text {
     position: relative;
 }
-.week-slide{
+.week-slide {
     position: absolute;
     left: 0;
     right: 0;
-    top: 100%;
+    top: 0;
     background-color: #fff;
-    .week-item{
+    .week-item {
         background-color: #fff;
-        .day-item{
+        .day-item {
         }
     }
     z-index: 10;
@@ -41,17 +41,19 @@
     }
 }
 
-.calendar, .week-slide{
+.calendar,
+.week-slide {
     display: flex;
-    
-    .month-item, .week-item{
+
+    .month-item,
+    .week-item {
         width: 100%;
         flex: 0 0 auto;
         display: flex;
         flex-wrap: wrap;
         padding: 0 10ipx;
         box-sizing: border-box;
-        .day-item{
+        .day-item {
             width: 14.258%;
             flex: 0 0 auto;
             text-align: center;
@@ -61,7 +63,7 @@
             justify-content: center;
             font-size: 14ipx;
             color: #333;
-            .active{
+            .active {
                 width: 28ipx;
                 height: 28ipx;
                 border-radius: 18ipx;
@@ -71,7 +73,7 @@
             }
 
             &.day-active {
-                .active{
+                .active {
                     color: #fff;
                     background-color: #e1251b;
                 }
@@ -79,15 +81,15 @@
             &.prev-month {
                 color: #999;
             }
-            &.next-month{
+            &.next-month {
                 color: #999;
             }
         }
     }
 }
 
-.animating{
-    transition: transform .3s;
+.animating {
+    transition: transform 0.3s;
 }
 .icon-bar {
     height: 24ipx;
@@ -98,7 +100,7 @@
     img {
         width: 14ipx;
     }
-    .rotate180{
+    .rotate180 {
         transform: rotate(180deg);
     }
 }
