添加新组件

--- a/packages/assets/css/animate.less
+++ b/packages/assets/css/animate.less
@@ -1,64 +1,63 @@
+@itv-sec: 10s;
 .slide-top-enter-active {
-  animation: slide-top .3s;
+    animation: slide-top @itv-sec;
 }
 .slide-top-leave-active {
-  animation: slide-top .3s reverse;
+    animation: slide-top @itv-sec reverse;
 }
 @keyframes slide-top {
-  0% {
-    top: 100%;
-
-  }
-  100% {
-    top: 0%;
-  }
+    0% {
+        top: 100%;
+    }
+    100% {
+        top: 0%;
+    }
 }
 
-
-
-
-.itv-fade-enter-active,.itv-fade-leave-active {
-  opacity: 1;
-  transition: opacity linear 0.2s;
+.itv-fade-enter-active,
+.itv-fade-leave-active {
+    opacity: 1;
+    transition: opacity linear 0.2s;
 }
-.itv-fade-enter, .itv-fade-leave-to {
-  opacity: 0;
+.itv-fade-enter,
+.itv-fade-leave-to {
+    opacity: 0;
 }
 .itv-dialog-enter-active {
-
-  animation: itv-dialog-in .5s;
+    animation: itv-dialog-in 0.5s;
 }
 .itv-dialog-leave-active {
-  animation: itv-dialog-out .3s;
-
+    animation: itv-dialog-out @itv-sec;
 }
 @keyframes itv-dialog-in {
-  0% {
-    transform-origin: center;
-    transform: translate(-50%,-50%) scale(1.185);
-    opacity: 0;
-  }
-  100% {
-    transform-origin: center;
-    transform: translate(-50%,-50%) scale(1);
-    opacity: 1;
-  }
+    0% {
+        transform-origin: center;
+        transform: translate(-50%, -50%) scale(1.185);
+        opacity: 0;
+    }
+    100% {
+        transform-origin: center;
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
 }
 @keyframes itv-dialog-out {
-  0% {
-     transform-origin: center;
-    transform:   translate(-50%,-50%) scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform-origin: center;
-    transform: translate(-50%,-50%) scale(0.85);
+    0% {
+        transform-origin: center;
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform-origin: center;
+        transform: translate(-50%, -50%) scale(0.85);
+        opacity: 0;
+    }
+}
+.itv-mask-enter,
+.itv-mask-leave-active {
     opacity: 0;
-  }
 }
-.itv-mask-enter, .itv-mask-leave-active {
-  opacity: 0;
-}
-.itv-mask-leave-active, .itv-mask-enter-active {
-  transition: opacity 300ms;
+.itv-mask-leave-active,
+.itv-mask-enter-active {
+    transition: opacity 300ms;
 }
