--- a/packages/components/schedule/index.less
+++ b/packages/components/schedule/index.less
@@ -91,6 +91,9 @@
 .animating {
     transition: transform 0.3s;
 }
+.slow-action {
+    // transition: transform 1ms;
+}
 .icon-bar {
     height: 24ipx;
     display: flex;
