--- a/packages/assets/css/doc.less
+++ b/packages/assets/css/doc.less
@@ -9,11 +9,11 @@
     padding-bottom: 20ipx;
     .phone-show{
         position: fixed;
-        top: 0ipx;
-        right: 0ipx;
+        top: 0px;
+        right: 0px;
         iframe{
-            width: 375ipx;
-            height: 667ipx;
+            width: 375px;
+            height: 667px;
             background-color: #fff;
             border:#ddd solid 1ipx;
             border-radius: 6ipx;
@@ -69,6 +69,7 @@
         .doc-tab-group{
             display: flex;
             border-bottom: #ddd solid 1ipx;
+            font-weight: bold;
             .tab-item-btn{
                 font-size: 16ipx;
                 padding: 10ipx;
