--- a/src/layouts/menu/index.scss
+++ b/src/layouts/menu/index.scss
@@ -1,9 +1,10 @@
 .layout-left{
     display: flex;
     flex-direction: column;
+    background-color: #304156;
     .el-scrollbar{
         flex: 1;
-        ::v-deep .el-scrollbar__view {
+        ::deep .el-scrollbar__view {
             min-height: 100%;
         }
     }
@@ -13,4 +14,11 @@
     width: 200px;
     min-height: 100%;
     height: 100%;
+}
+.logo{
+    height: 56px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
