--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    background: url('@/assets/imgs/login_bg.jpeg') no-repeat 100% 100%;
+    background: url('~@/assets/imgs/login_bg.jpeg') no-repeat 100% 100%;
 }
 .el-login-box {
     width: 40%;
@@ -16,7 +16,7 @@
     border-radius: 18px;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    background: rgba(255, 255, 255, 0.2) url('@/assets/imgs/login_bg.jpeg') no-repeat fixed top;
+    background: rgba(255, 255, 255, 0.2) url('~@/assets/imgs/login_bg.jpeg') no-repeat fixed top;
     background-size: 100% 100%;
     // opacity: 0.5;
 }
