--- a/src/assets/css/iconfont.scss
+++ b/src/assets/css/iconfont.scss
@@ -14,6 +14,9 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  .icon-home::before {
+.icon-home::before {
     content: '\e697';
+}
+.icon-arrow::before {
+    content: '\e693';
 }
