--- a/src/assets/css/init.scss
+++ b/src/assets/css/init.scss
@@ -11,7 +11,7 @@ body {
 td,th,caption { font-size:14px; }
 h1, h2, h3, h4, h5, h6 { font-weight:normal; font-size:100%; }
 address, caption, cite, code, dfn, em, strong, th, var { font-style:normal; font-weight:normal;}
-a { color:#555; text-decoration:none; }
+a { color:#555; text-decoration:none; padding: 0;}
 a:hover { text-decoration:underline; }
 img { border:none; }
 ol,ul,li { list-style:none; }
@@ -21,3 +21,6 @@ html {overflow-y: scroll; height: 100%;}
  
 .clearfix:after {content: "."; display: block; height:0; clear:both; visibility: hidden;}
 .clearfix { *zoom:1; }
+a:hover {
+    text-decoration: none;
+}
