--- a/src/mobile/scroller/style/index.scss
+++ b/src/mobile/scroller/style/index.scss
@@ -64,3 +64,13 @@
         } 
     }
 }
+
+
+.it-scroll-evevator {
+    overflow: hidden;
+    position: relative;
+    .it-scroll-evevator-header{
+        margin-top: -0.5px;
+    }
+    
+}
