--- a/src/mobile/scale/style/index.scss
+++ b/src/mobile/scale/style/index.scss
@@ -6,4 +6,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-user-select: none;
+    user-select: none;
 }
