--- a/src/mobile/images-preview/style/index.scss
+++ b/src/mobile/images-preview/style/index.scss
@@ -1,10 +1,48 @@
-@import '../../scale/style/index.scss';
-@import '../../swiper-mini/style/index.scss';
-.it-images-preview {
+.it-images-preview{
+    overflow: hidden;
+    width: 100%;
+    position: relative;
     height: 100%;
-    background-color: #000;
-    .it-images-preview-item {
-        max-width: 100%;
-        max-height: 100%;
+}
+.it-images-preview-flex-column{
+    flex-direction: column;
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    .it-images-preview-item{
+        flex: 1;
+        height: 100%;
+        width: 100%;
+        flex: 0 0 auto;
+        .it-images-preview-img {
+            max-width: 100%;
+            max-height: 100%;
+        }
     }
+}
+
+.it-images-preview-flex-row{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    .it-images-preview-item{
+        width: 100%;
+        flex:  0 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .it-images-preview-img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+    }
+}
+
+.it-images-preview-animating{
+    transition: all 200ms ease 0s;
+}
+
+.itv-move-anmiating{
+    transition: all 0ms ease 0s;
 }
