--- a/src/mobile/images-preview/style/index.scss
+++ b/src/mobile/images-preview/style/index.scss
@@ -3,24 +3,9 @@
     width: 100%;
     position: relative;
     height: 100%;
+    background-color: rgba($color: #000000, $alpha: 1.0);
 }
-.it-images-preview-flex-column{
-    flex-direction: column;
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    .it-images-preview-item{
-        flex: 1;
-        height: 100%;
-        width: 100%;
-        flex: 0 0 auto;
-        .it-images-preview-img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-    }
-}
+
 
 .it-images-preview-flex-row{
     display: flex;
@@ -32,6 +17,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
+        box-sizing: border-box;
+        padding: 2px;
         .it-images-preview-img {
             max-width: 100%;
             max-height: 100%;
