--- a/src/assets/css/demo.scss
+++ b/src/assets/css/demo.scss
@@ -25,3 +25,19 @@
         -webkit-overflow-scrolling: touch;
     }
 }
+
+.link-item {
+    position: relative;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    padding-left: 16px;
+    font-size: 14px;
+    border-bottom:#eee solid 1px;
+    .rotate {
+        position: absolute;
+        right: 16px;
+        top: 50%;
+        transform: translateY(-50%) rotate(180deg);
+    }
+}
