--- a/src/assets/css/demo.scss
+++ b/src/assets/css/demo.scss
@@ -40,4 +40,8 @@
         top: 50%;
         transform: translateY(-50%) rotate(180deg);
     }
+    .link-item-text {
+        position: absolute;
+        right: 40px;
+    }
 }
