--- a/src/mobile/picker/style/picker.scss
+++ b/src/mobile/picker/style/picker.scss
@@ -1,5 +1,5 @@
 @import './PickerSlot.scss';
-@import '../../Dialog/style/ItDialog.scss';
+@import '../../Dialog/style/Dialog.scss';
 .picker-item {
     height: 44*5ipx;
     background-color: #fff;
