--- a/src/mobile/CalendarTime/style/CalendarTime.scss
+++ b/src/mobile/CalendarTime/style/CalendarTime.scss
@@ -1,5 +1,6 @@
 @import '../../Dialog/style/Dialog.scss';
 @import '../../SwiperMini/style/SwiperMini.scss';
+@import '../../Picker/style/PickerSlot.scss';
 .it-calendar-time{
     display: flex;
     flex-direction: column;
